# UnityPathTracing

./: .gitignore  .gitmodules  NRDSample.cpp  NativeRtxptFeature_Plan.md  ProjectArchitecture.md  build.bat  build_and_copy.bat  clean.bat  download_bistro.bat  fix_dds_small_bc.ps1  fix_dds_small_bc.py  patch.ps1  patch_agility_sdk.ps1  readme.md
.claude/: settings.local.json
NativePlugin/: .gitignore  CMakeLists.txt
NativePlugin/NativeRenderPlugin/include/: AccelerationStructure.h  BindlessTexture.h
NativePlugin/NativeRenderPlugin/src/: AccelerationStructure.cpp  BindlessBuffer.cpp  BindlessTexture.cpp  ComputeShader.cpp  DescriptorHeapAllocator.cpp  Plugin.cpp  RayTraceShader.cpp
NativePlugin/OMMBakerPlugin/src/: OMMBakerPlugin.cpp
PrepareLight/UnityRTXDI/: BindlessInstance.cpp  RenderSystem.cpp
RenderingPlugin/: .gitignore  CMakeLists.txt
RenderingPlugin/D3D12HeapHook/: D3D12HeapHook.cpp  D3D12HeapHook.h
RenderingPlugin/Denoiser/: DLRRInstance.cpp  DLRRInstance.h  DLSRFrameData.h  DLSRInstance.cpp  DLSRInstance.h  FrameData.h  NISFrameData.h  NISInstance.cpp  NISInstance.h  NrdInstance.cpp  NrdInstance.h  RenderSystem.cpp  RenderingPlugin.cpp
RenderingPlugin/NativeRenderPlugin/include/: AccelerationStructure.h  BindlessBuffer.h  BindlessTexture.h  ComputeDescriptorSet.h  ComputeShader.h  D3D12HeapHook.h  DescriptorSetBase.h  NativeStructuredBuffer.h  RayTraceDescriptorSet.h  RayTraceShader.h  ShaderBindings.h
RenderingPlugin/NativeRenderPlugin/include/Descriptors/: ComputeDescriptorSet.h  DescriptorHeapAllocator.h  DescriptorSetBase.h
RenderingPlugin/NativeRenderPlugin/include/Resources/: AccelerationStructure.h  BindlessBuffer.h  BindlessUAVTexture.h  NativeBuffer.h  NativeGpuBuffer.h
RenderingPlugin/NativeRenderPlugin/include/Shaders/: ComputeShader.h  RayTraceShader.h  ShaderBase.h  ShaderBindings.h
RenderingPlugin/NativeRenderPlugin/src/: AccelerationStructure.cpp  BindlessTexture.cpp  ComputeDescriptorSet.cpp  ComputeShader.cpp  D3D12HeapHook.cpp  DescriptorSetBase.cpp  NativeStructuredBuffer.cpp  Plugin.cpp  PluginInternal.h  RayTraceDescriptorSet.cpp  RayTraceShader.cpp  ShaderBase.cpp
RenderingPlugin/NativeRenderPlugin/src/Descriptors/: ComputeDescriptorSet.cpp  DescriptorHeapAllocator.cpp  DescriptorSetBase.cpp  RayTraceDescriptorSet.cpp
RenderingPlugin/NativeRenderPlugin/src/Hooks/: D3D12HeapHook.cpp
RenderingPlugin/NativeRenderPlugin/src/Plugin/: Plugin.cpp  PluginInternal.h
RenderingPlugin/NativeRenderPlugin/src/Resources/: AccelerationStructure.cpp  BindlessUAVTexture.cpp  NativeBuffer.cpp  NativeGpuBuffer.cpp  NativeStructuredBuffer.cpp
RenderingPlugin/NativeRenderPlugin/src/Shaders/: ComputeShader.cpp  RayTraceShader.cpp
RenderingPlugin/PrepareLight/: BindlessInstance.cpp
RenderingPlugin/ShaderCompilerPlugin/include/: ShaderCompilerPlugin.h
RenderingPlugin/ShaderCompilerPlugin/src/: ShaderCompilerPlugin.cpp
UnityProject/: .gitignore  UnityRayTracingMeshUtils.cginc
UnityProject/Assets/Anim/: Adam (2).prefab  Adam 1.controller  Adam.controller
UnityProject/Assets/Arcade/: Arcade.unity
UnityProject/Assets/Arcade/Materials/: Cabinet.mat  Chair_Blue.mat  Chair_Orange.mat  CheckerTile.mat  Poster.mat  Wall.mat
UnityProject/Assets/Gltf/: BistroExterior.gltf  BistroExterior.unity  BistroInterior.gltf  BistroInterior.unity
UnityProject/Assets/Materials/: Black.mat  Glass.mat  Light 2.mat  Light.mat  Mirror.mat  Test 2.mat  Test.mat  W.mat
UnityProject/Assets/Models/: Green_Mat.mat  Grey_Mat.mat  Red_Mat.mat
UnityProject/Assets/NRD-Sample/Shaders/: Composition.computeshader  Composition.hlsli  ConfidenceBlur.computeshader  DlssAfter.computeshader  DlssBefore.computeshader  Final.computeshader  MorphMeshUpdatePrimitives.computeshader  MorphMeshUpdateVertices.computeshader  SharcResolve.computeshader  SharcUpdate.computeshader  Taa.computeshader  TraceOpaque.computeshader  TraceOpaque.hlsli  TraceTransparent.computeshader  UpdateSkinnedPrimitives.compute
UnityProject/Assets/RTXDI/Shaders/: CompositingPass.computeshader  CompositingPass.hlsl  GBufferHelpers.hlsli  GlassPass.computeshader  PostprocessGBuffer.computeshader  PrepareLights.computeshader  PreprocessEnvironmentMap.computeshader  RaytracedGBuffer.computeshader  RenderEnvironmentMap.computeshader
UnityProject/Assets/RTXPT/Shaders/: BuildSP_HitEmissive.hitgroupshader  BuildSP_HitNonEmissive.hitgroupshader  FillSP_HitEmissive.hitgroupshader  FillSP_HitNonEmissive.hitgroupshader  FillStablePlanes.rayshader  Reference.rayshader  Reference_HitEmissive.hitgroupshader  Reference_HitNonEmissive.hitgroupshader
UnityProject/Assets/Resources/: PerformanceTestRunInfo.json
UnityProject/Assets/Scenes/: NRDSample.unity  Profiler.prefab  SampleScene.unity
UnityProject/Assets/Scripts/: FillUintTexture.compute  GlobalConstants.cs  PathTracingDataBuilder.cs  PathTracingPassSingle.cs  PathTracingSetting.cs  RtxdiTest.cs  ShaderIDs.cs  SpotLightData.cs
UnityProject/Assets/Scripts/Editor/: LitRayTracingShader.cs  NRDFeatureEditor.cs  NativeRtxptMaterialOverrideEditor.cs  PathTracingFeatureEditor.cs  RtxdiFeatureEditor.cs  SkinRayTracingShader.cs
UnityProject/Assets/Scripts/PathTracing/: CameraFrameState.cs  NRDFeature.cs  NativeFeature.cs  PathTracingDataBuilder.cs  PathTracingFeature.cs  PathTracingPass.cs  PathTracingResourcePool.cs  PathTracingSetting.cs  PathTracingUtils.cs  PrimitiveBuildJob.cs  RenderResource.cs  RenderResourceType.cs  RtxdiFeature.cs  RtxdiResources.cs  ShaderIDs.cs  ShowPass.cs
UnityProject/Assets/Scripts/PrepareLight/: GPUScene.cs  PrepareLightResource.cs  RTXDILight.cs
UnityProject/Assets/Settings/: RPAsset.asset  Renderer 1.asset  Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
UnityProject/Assets/Shaders/: Composition.compute  PrepareLight.compute  SharcUpdate.hlsl  TraceOpaque.hlsl  VolumetricFogShadow.hlsl  VolumetricFogShadow.raytrace  VolumetricIntegrate.compute
UnityProject/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  NativeShaderSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+400 files in other folders)
